add photos, descriptions, styles to css and html files.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"   integrity="sha256-DI6NdAhhFRnO2k51mumYeDShet3I8AKCQf/tf7ARNhI="   crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery-1.12.2.js"></script>
+    <script src="js/scripts.js"></script>
     <title>Animals</title>
   </head>
   <body>
     <div class="container">
+      <h1>Let's learn about some animals!</h1>
+      <div class="butts">
+        <button type="button" class="btn btn-primary">Pandas</button>
+        <button type="button" class="btn btn-primary">Turtles</button>
+        <button type="button" class="btn btn-primary">Wild Cats</button>
+      </div>
+      <div class="panda">
+        <img src="img/panda.jpg" alt="This is a photo of panda." />
+        <p>The giant panda, a black-and-white bear, has a body typical of bears. It has black fur on ears, eye patches, muzzle, legs, and shoulders. The rest of the animal's coat is white. Although scientists do not know why these unusual bears are black and white, some speculate that the bold coloring provides effective camouflage into their shade-dappled snowy and rocky surroundings. The panda's thick, wooly coat keeps it warm in the cool forests of its habitat. Giant pandas have large molar teeth and strong jaw muscles for crushing tough bamboo. Many people find these chunky, lumbering animals to be cute, but giant pandas can be as dangerous as any other bear.</p>
+
+      </div>
+      <div class="turtle">
+        <img src="img/turtle.jpg" alt="This is a picture of turtle." />
+        <p>Turtles are reptiles with hard shells that protect them from predators. They are among the oldest and most primitive groups of reptiles, having evolved millions of years ago. Turtles live all over the world in almost every type of climate. According to the Integrated Taxonomic Information System (ITIS), the turtle order, Testudines (or Chelonia), splits into two suborders, Cryptodira and Pleurodira, and then further splits into 13 families, 75 genera and more than 300 species.</p>
+      </div>
+      <div class="cats">
+        <img src="img/cat.jpg" alt="This is a picture of a wild cat." />
+        <p>Wildcat is an ancestor of domestic cat. There are 22 subspecies of wildcats that can be found in Africa, Europe and Asia. Wildcats inhabit forests, wooded grasslands, semi-deserts, areas near the marshes, coasts, alpine meadows, savannas and steppes. Their number in the wild is rapidly declining due to interbreeding with domestic cats (created hybrids are not genetically pure wildcats), habitat loss and traffic accidents. Despite these factors, wildcats are still not on the list of endangered species.</p>
+      </div>
     </div>
   </body>
 </html>
